Fixes colors for confirmation modal on both light and dark modes

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -150,6 +150,13 @@ body
     input[type='checkbox']
         background-color: $clr-gray-100
 
+    .confirm-modal
+        background-color: white
+
+        .cancel 
+            color: $clr-blueGray-400
+            background-color: $clr-gray-500
+
 
 [data-theme="dark"] 
     $background-color: $bg-dark
@@ -247,3 +254,9 @@ body
 
     input[type='checkbox']
         background-color: $clr-gray-800
+
+    .confirm-modal
+        background-color: $clr-gray-800
+
+        .cancel
+            background-color: $clr-gray-700
